--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "barco-webapp",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.x"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
